# RockSatX-GHOST-Hardware

./: .gitmodules  README.md
Capsule/: README.md
Capsule/Documentation/: Capsule_BlockDiagram.drawio
Capsule/KiCadProjectFiles/: KRUPS-Capsule.kicad_pcb  KRUPS-Capsule.kicad_prl  KRUPS-Capsule.kicad_pro  KRUPS-Capsule.kicad_sch  KRUPS_Symbol_Library.kicad_sym  fp-info-cache  fp-lib-table  sym-lib-table
Documentation/: FemtoSat_BOM.csv
FemtoSat/: README.md
FemtoSat/Documentation/: FemtoSat_BOM.csv  FemtoSat_BlockDiagram.drawio  FemtosatBlockDiagram.drawio
FemtoSat/KiCadProjectFiles/: KRUPS-FemtoSat.kicad_pcb  KRUPS-FemtoSat.kicad_pro  KRUPS-FemtoSat.kicad_sch  KRUPS-FemtoSat.kicad_sym  fp-lib-table  sym-lib-table
FemtoSat/VerificationProgram/: CMakeLists.txt  README.md
FemtoSat/VerificationProgram/src/: CMakeLists.txt  main.cpp
KiCadProjectFiles/: KRUPS-FemtoSat.kicad_pcb  KRUPS-FemtoSat.kicad_pro  KRUPS-FemtoSat.kicad_sch  KRUPS-FemtoSat.kicad_sym
KiCadProjectFiles/KRUPS-FemtoSat.pretty/: 74439346068.kicad_mod  LC1258OANP.kicad_mod  TENSILITY_54-00170.kicad_mod
LR62XEAdapter/: README.md
LR62XEAdapter/KiCadProjectFiles/: LR62XEAdapter.kicad_pcb  LR62XEAdapter.kicad_pro  LR62XEAdapter.kicad_sch  LR62XEAdapter.kicad_sym  fp-lib-table  sym-lib-table
RocketStation/: README.md
RocketStation/Documentation/: RocketStationBlockDiagram.drawio  RocketStation_BOM.csv  RocketStation_BlockDiagram.drawio
RocketStation/KiCadProjectFiles/: KRUPS-RocketStation.kicad_pcb  KRUPS-RocketStation.kicad_pro  KRUPS-RocketStation.kicad_sch  KRUPS-RocketStation.kicad_sym  (+2 more)
(+22 files in other folders)
